[gd_scene load_steps=12 format=3 uid="uid://dn0x4u3o2blor"]

[ext_resource type="Script" uid="uid://dc73m5hwraq8y" path="res://HotTopicGame/Menu/Main/main_menu.gd" id="1_j7iwc"]
[ext_resource type="PackedScene" uid="uid://dgh3ivnqtm6md" path="res://HotTopicGame/Menu/Main/Bg.tscn" id="1_npvxp"]
[ext_resource type="PackedScene" uid="uid://cq3oad5f7idrh" path="res://HotTopicGame/Menu/LevelSelect/level_select.tscn" id="2_h702d"]
[ext_resource type="Texture2D" uid="uid://hcibjcm6dcl3" path="res://HotTopicGame/Menu/LevelSelect/Button.png" id="2_n46wi"]
[ext_resource type="FontFile" uid="uid://hg0q2vqo4acd" path="res://HotTopicGame/Assest/Others/Kenney Bold.ttf" id="3_n46wi"]
[ext_resource type="Script" uid="uid://ihx5l2vjtfi4" path="res://HotTopicGame/Menu/Main/ApiCatFact.gd" id="6_tatfk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ty3s2"]
atlas = ExtResource("2_n46wi")
region = Rect2(173, 433, 425, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_h702d"]
atlas = ExtResource("2_n46wi")
region = Rect2(629, 433, 425, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_tatfk"]
atlas = ExtResource("2_n46wi")
region = Rect2(1085, 433, 426, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3qtn"]
atlas = ExtResource("2_n46wi")
region = Rect2(629, 433, 425, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w7sx"]
atlas = ExtResource("2_n46wi")
region = Rect2(1085, 433, 426, 189)

[node name="MainScreen" type="Node2D"]
script = ExtResource("1_j7iwc")
levelSelectScene = ExtResource("2_h702d")

[node name="BG" parent="." instance=ExtResource("1_npvxp")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -215.0
offset_top = 60.0
offset_right = 215.0
offset_bottom = 249.0
grow_horizontal = 2
texture = SubResource("AtlasTexture_ty3s2")

[node name="Label" type="Label" parent="CanvasLayer/Title"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_right = 175.0
offset_bottom = 142.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0.025178, 0.53753, 0.801479, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_n46wi")
theme_override_font_sizes/font_size = 70
text = "traps"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.5
offset_top = -98.5
offset_right = 146.5
offset_bottom = 236.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_h702d")
texture_pressed = SubResource("AtlasTexture_tatfk")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/PlayButton"]
layout_mode = 0
offset_left = 63.5
offset_top = 17.5
offset_right = 223.5
offset_bottom = 77.5
theme_override_colors/font_outline_color = Color(0, 0.615686, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_n46wi")
theme_override_font_sizes/font_size = 20
text = "play"
horizontal_alignment = 1

[node name="ExitButton" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_h702d")
texture_pressed = SubResource("AtlasTexture_tatfk")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/ExitButton"]
layout_mode = 0
offset_left = 63.5
offset_top = 18.5
offset_right = 223.5
offset_bottom = 78.5
theme_override_colors/font_outline_color = Color(0, 0.615686, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_n46wi")
theme_override_font_sizes/font_size = 20
text = "exit"
horizontal_alignment = 1

[node name="CatFact" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
z_index = 2
layout_mode = 2
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_l3qtn")
texture_pressed = SubResource("AtlasTexture_0w7sx")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/CatFact"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -25.5
offset_right = 124.0
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0.615686, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_n46wi")
theme_override_font_sizes/font_size = 20
text = "cat fact?"
horizontal_alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="CanvasLayer/VBoxContainer/CatFact"]

[node name="SettingsButton" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_h702d")
texture_pressed = SubResource("AtlasTexture_tatfk")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/SettingsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -30.0
offset_right = 80.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0.615686, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_n46wi")
theme_override_font_sizes/font_size = 20
text = "settings"
horizontal_alignment = 1

[node name="ApiCatFact" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 517.0
offset_top = 540.0
offset_right = 763.0
offset_bottom = 540.0
script = ExtResource("6_tatfk")

[node name="RichTextLabel" type="RichTextLabel" parent="ApiCatFact"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -583.0
offset_top = 61.0
offset_right = 583.0
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("3_n46wi")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="CanvasLayer/VBoxContainer/PlayButton" to="." method="_on_play_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/ExitButton" to="." method="_on_exit_button_down"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/CatFact" to="ApiCatFact" method="_on_cat_fact_pressed"]
[connection signal="request_completed" from="CanvasLayer/VBoxContainer/CatFact/HTTPRequest" to="ApiCatFact" method="_on_http_request_request_completed"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_button_down"]
